syntax = "proto3";
import "Role.proto";
//protoc --proto_path=src\main\java\com\game\protobuf --java_out=src\main\java src\main\java\com\game\protobuf\MsgRoleInfo.proto

option java_package = "com.hailintang.client.protobuf.protoc";
option java_outer_classname = "MsgTradeInfoProto";

enum RequestType{
    REQUESTTRADE = 0;
    CONFIRMTRADE = 1;
    TRADINGGOODS = 2;
    TRADINGMONEY = 3;
    TRADEGOODS = 4;
}

message RequestTradeInfo{
    string requestId = 1;       // 请求id
    int32 userId = 2;           // 请求的uid
    string roleName = 3;            //目的地
    RequestType type = 4;      // 请求类型
    string goodsName = 5;
    string uuid = 6;
    string number = 7;
}

message ResponseTradeInfo{
    int32 result = 1;           // 返回结果
    int32 userId = 2;           // 返回的uid
    string content = 3;         // 返回内容

    RequestType type = 4;       // 返回类型

    Role role = 5;          // 用户角色
}